[package]
name = "datagraph"
version = "0.1.0"
edition = "2024"
authors = ["Patrick Simmelbauer <patrick.simmelbauer@gmail.com>"]
description = "core of datagraph"
license = "MIT"
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cpal = "0.17.3"
wasm-bindgen = "0.2.120"

[dependencies.web-sys]
version = "0.3.97"
features = ["console"]
