[package]
name = "datagraph"
version = "0.1.0"
edition = "2024"
authors = ["Patrick Simmelbauer <patrick.simmelbauer@gmail.com>"]
description = "core of datagraph"
license = "MIT"
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cpal = "0.17.3"
wasm-bindgen = "0.2.121"
js-sys = "0.3.98"
nanoid = "0.5.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dependencies.web-sys]
version = "0.3.98"
features = ["console"]
