[package]
name = "datagraph"
version = "0.1.1"
edition = "2024"
authors = ["Patrick Simmelbauer <patrick.simmelbauer@gmail.com>"]
description = "core of datagraph"
license = "MIT"
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.98"
nanoid = "0.5.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9.4"
wasm-bindgen = "0.2.122"
serde = { version = "1.0", features = ["derive"] }
tsify-next = { version = "0.5.6", features = ["js"], default-features = false }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.72"
console_error_panic_hook = "0.1.7"
console_log = "1"
log = "0.4.30"

[dependencies.web-sys]
version = "0.3.98"
features = [
  "AudioContext",
  "AudioDestinationNode",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletNodeOptions",
  "BaseAudioContext",
  "MessageEvent",
  "MessagePort",
]
